--- a/liquidwar6/ChangeLog
+++ b/liquidwar6/ChangeLog
@@ -1,3 +1,7 @@
+2012-01-26 : Christian Mauduit <ufoot@ufoot.org>
+
+	* All headers (API) documented.
+
 2012-01-24 : Christian Mauduit <ufoot@ufoot.org>
 
 	* Removed intermediate autotools file from git.
